LabirintoBuilder passes all tests